objects/ms_ci__ComposerFlow__x.object
<CustomObject>
    <description>This objects contains information about flow created in MuleSoft&apos;s Composer</description>
    <externalDataSource>ms_ci__mulesoft_composer_externalDataSource</externalDataSource>
    <externalName>ComposerFlows</externalName>
    <fields>
        <fullName>ms_ci__Flow_Name__c</fullName>
        <description>Flow_Name</description>
        <externalDeveloperName>Flow_Name</externalDeveloperName>
        <label>Flow Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ms_ci__Flow_Owner_Id__c</fullName>
        <description>Flow_Owner_Id</description>
        <externalDeveloperName>Flow_Owner_Id</externalDeveloperName>
        <label>Flow Owner Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ms_ci__Flow_Owner__c</fullName>
        <description>Flow_Owner</description>
        <externalDeveloperName>Flow_Owner</externalDeveloperName>
        <label>Flow Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ms_ci__Last_Modified_Date__c</fullName>
        <description>Last_Modified_Date</description>
        <externalDeveloperName>Last_Modified_Date</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ms_ci__Status__c</fullName>
        <description>Status</description>
        <externalDeveloperName>Status</externalDeveloperName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Composer Flow</label>
    <listViews>
        <fullName>ms_ci__All</fullName>
        <columns>ms_ci__Flow_Name__c</columns>
        <columns>ms_ci__Status__c</columns>
        <columns>ms_ci__Last_Modified_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Composer Flows</pluralLabel>
</CustomObject>